// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioButton > should render 1`] = `
<div>
  <input
    class="border-theme-secondary-300 dim:border-theme-dim-500 h-4 w-4 cursor-pointer transition duration-150 ease-in-out focus:ring-offset-0 dark:not-checked:border-theme-dark-500 dark:not-checked:bg-theme-dark-900 dark:checked:border-none text-theme-success-600"
    type="radio"
  />
</div>
`;

exports[`RadioButton > should render a danger color 1`] = `
<div>
  <input
    class="border-theme-secondary-300 dim:border-theme-dim-500 h-4 w-4 cursor-pointer transition duration-150 ease-in-out focus:ring-offset-0 dark:not-checked:border-theme-dark-500 dark:not-checked:bg-theme-dark-900 dark:checked:border-none text-theme-danger-400"
    type="radio"
  />
</div>
`;

exports[`RadioButton > should render a hint color 1`] = `
<div>
  <input
    class="border-theme-secondary-300 dim:border-theme-dim-500 h-4 w-4 cursor-pointer transition duration-150 ease-in-out focus:ring-offset-0 dark:not-checked:border-theme-dark-500 dark:not-checked:bg-theme-dark-900 dark:checked:border-none text-theme-hint-500"
    type="radio"
  />
</div>
`;

exports[`RadioButton > should render a info color 1`] = `
<div>
  <input
    class="border-theme-secondary-300 dim:border-theme-dim-500 h-4 w-4 cursor-pointer transition duration-150 ease-in-out focus:ring-offset-0 dark:not-checked:border-theme-dark-500 dark:not-checked:bg-theme-dark-900 dark:checked:border-none text-theme-primary-600 dim:checked:text-theme-dim-navy-600 dim:not-checked:bg-transparent"
    type="radio"
  />
</div>
`;

exports[`RadioButton > should render a success color 1`] = `
<div>
  <input
    class="border-theme-secondary-300 dim:border-theme-dim-500 h-4 w-4 cursor-pointer transition duration-150 ease-in-out focus:ring-offset-0 dark:not-checked:border-theme-dark-500 dark:not-checked:bg-theme-dark-900 dark:checked:border-none text-theme-success-600"
    type="radio"
  />
</div>
`;

exports[`RadioButton > should render a warning color 1`] = `
<div>
  <input
    class="border-theme-secondary-300 dim:border-theme-dim-500 h-4 w-4 cursor-pointer transition duration-150 ease-in-out focus:ring-offset-0 dark:not-checked:border-theme-dark-500 dark:not-checked:bg-theme-dark-900 dark:checked:border-none text-theme-warning-600"
    type="radio"
  />
</div>
`;
